# angels-ai-school

./: .env  .env.example  .env.production.render  .env.template  .gitignore  AB_TESTING_REPORT.md  AGENTIC_BUILD_COMPLETE.md  ALL_25_FEATURES_STATUS.md  API_DOCUMENTATION.md  AUTONOMOUS_EXECUTION_REPORT.md  BACKUP_STRATEGY.md  BUILD_COMPLETE.md  BUILD_COMPLETE_SCENARIO_3.md  BUILD_SUMMARY_FINAL.md  BULK_OPERATIONS_COMPLETE.md  CLARITY_UNLEASHED.md  COMPLETE_FEATURES_INVENTORY.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_PROJECT_REVIEW.md  CROSS_SCHOOL_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_AND_AB_TESTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW_CHECKLIST.md  Dockerfile  Document_Intelligence_Service.py  ENVIRONMENT_VARIABLES.md  Executive Assistant Service.py  FESTIVE_SPRINT_REPORT.md  FIELD_RESEARCH_GAPS_ANALYSIS.md  FINAL_100_REPORT.md  FINAL_COMPLETE.md  FINAL_DEPLOYMENT_GUIDE.md  Financial_Operations_Service.py  HEALTH_CHECK.md  MARKET_READY_REPORT.md  MEMORY_OPTIMIZATION.md  MISSION_ACCOMPLISHED.md  (+62 more)
.github/workflows/: automated-testing.yml  ci-cd.yml  deploy.yml  test.yml
Desktop/school-ai-angel/: .env.example  FINAL_SUMMARY.md  TESTING_GUIDE.md
api/: __init__.py  main.py
api/core/: auth.py  circuit_breakers.py  config.py  mcp.py
api/jobs/: automated_reminders.py
api/middleware/: audit.py  memory_monitor.py  rate_limiter.py
api/migrations/: user_first_auth.py
api/models/: agents.py  schemas.py
api/routers/: branding.py  receptionist.py  school_registration.py  universal_import.py  ussd_webhook.py  whatsapp_webhook.py
api/routes/: __init__.py  agents.py  ai.py  alumni.py  analytics.py  attendance.py  auth.py  auth_google.py  boarding.py  bulk_operations.py  canteen.py  chatbot.py  clarity.py  command_intelligence.py  data_migration.py  director.py  discipline.py  discounts.py  document_intelligence.py  documents.py  domain_intelligence.py  events.py  experiments.py  export.py  feeding.py  fees.py  finance.py  fix_imports.py  government_reporting.py  health.py  homework.py  inventory.py  library.py  messaging.py  monitoring.py  multi_role.py  multi_school.py  parent_portal.py  parents.py  payments.py  (+13 more)
api/scripts/: check_count.py  seed_large_school.py
api/services/: __init__.py  ai_experiments.py  alumni.py  attendance.py  audit.py  auth.py  boarding.py  bulk_operations.py  calendar_sync.py  canteen.py  chatbot.py  clarity.py  command_intelligence.py  cost_analysis.py  data_migration.py  database.py  digital_ceo_service.py  discipline.py  discounts.py  document_intelligence.py  domain_intelligence.py  email_service.py  encryption.py  error_analyzer.py  events.py  executive.py  export.py  feature_flags.py  feeding.py  government_reporting.py  health.py  homework.py  id_card_generator.py  inventory.py  library.py  master_orchestrator_complete.py  memory_optimizer.py  mobile_money.py  monitoring.py  (+21 more)
database/: COMPLETE_DATABASE_SCHEMA.sql
desktop/: package.json
migrations/: 001_initial_schema.sql  002_academic_operations.sql  003_financial_operations.sql  004_support_operations.sql  005_communications_and_ai.sql  006_authentication.sql  007_documents_and_intelligence.sql  008_cross_school_access.sql  009_school_requirements_and_multi_role.sql  010_top_6_features.sql  011_all_25_features.sql  012_audit_and_security.sql  013_enable_rls.sql  014_dynamic_attendance.sql  README.md
scripts/: backup_database.sh  diagnose_errors.py  health_monitor.py  restore_database.sh  setup_database_backups.sql
tests/: inspect_db.py  test_agents_comprehensive.py  test_api.py  test_auth.py  test_comprehensive.py  test_fees.py  test_integrations.py  test_load_performance.py  test_security.py  test_students.py  verify_attendance.py  verify_va_reminders.py
webapp/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1766682396753-08ca09d4d3cc9.mjs  vitest.config.ts
(+153 files in other folders)
