[project]
name = "angels_ai___complete_educational_revolution_platform"
version = "0.1.0"
description = "angels_ai___complete_educational_revolution_platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
angels_ai___complete_educational_revolution_platform = "angels_ai___complete_educational_revolution_platform.main:run"
run_crew = "angels_ai___complete_educational_revolution_platform.main:run"
train = "angels_ai___complete_educational_revolution_platform.main:train"
replay = "angels_ai___complete_educational_revolution_platform.main:replay"
test = "angels_ai___complete_educational_revolution_platform.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
