[project]
name = "angels_ai___complete_educational_revolution_platform"
version = "0.1.0"
description = "angels_ai___complete_educational_revolution_platform using crewAI"
authors = [{ name = "Nsubuga Collin", email = "nsubugacollin@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "psycopg2-binary>=2.9.9",  # Database
    "python-dotenv>=1.0.0",    # Environment variables
    "fastapi>=0.109.0",        # API framework
    "uvicorn>=0.27.0",         # ASGI server
    "pydantic>=2.5.0",         # Data validation
    "httpx>=0.26.0",           # HTTP client
    "pillow>=10.2.0",          # Image processing
    "google-cloud-vision>=3.7.0",  # OCR
    "boto3>=1.34.0",           # AWS S3
    "psutil>=5.9.0",           # Resource monitoring
    "pyjwt>=2.8.0",            # Auth tokens
    "email-validator>=2.1.0",  # Pydantic email validation
    "sqlalchemy>=2.0.0",       # ORM (partial usage)
    "reportlab>=4.0.0",        # PDF generation
    "google-auth>=2.20.0",     # Google APIs
    "google-api-python-client>=2.90.0", # Google API client
    "python-multipart>=0.0.9", # Form data support
]

[project.scripts]
angels_ai___complete_educational_revolution_platform = "angels_ai___complete_educational_revolution_platform.main:run"
run_crew = "angels_ai___complete_educational_revolution_platform.main:run"
train = "angels_ai___complete_educational_revolution_platform.main:train"
replay = "angels_ai___complete_educational_revolution_platform.main:replay"
test = "angels_ai___complete_educational_revolution_platform.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
